--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -9,12 +9,12 @@
 name: Build OpenWrt
 
 on:
-  repository_dispatch:
+#  repository_dispatch:
   release:
     types: published
   push:
     branches:
-      - master
+      - hp-h5740
     paths:
       - '.config'
 #  schedule:
