--- a/.config
+++ b/.config
@@ -2231,7 +2231,7 @@ CONFIG_PACKAGE_kmod-ne2k-pci=y
 # CONFIG_PACKAGE_kmod-niu is not set
 # CONFIG_PACKAGE_kmod-of-mdio is not set
 CONFIG_PACKAGE_kmod-pcnet32=y
-# CONFIG_PACKAGE_kmod-phy-broadcom is not set
+CONFIG_PACKAGE_kmod-phy-broadcom=y
 CONFIG_PACKAGE_kmod-phy-realtek=y
 # CONFIG_PACKAGE_kmod-r6040 is not set
 CONFIG_PACKAGE_kmod-r8125=y
